# prompt-poetry

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  COOKBOOK.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new_preset.md  new_technique.md
.github/workflows/: tests.yml
docs/plans/: 2026-03-23-prompt-poetry-design.md  2026-03-23-prompt-poetry-implementation.md
examples/: agent_system.py  custom_techniques.py  quickstart.py  rag_pipeline.py
media/: record-all.sh
media/shorts/: 01-intro.py  02-pipe-operator.py  03-anti-hallucination.py  04-presets.py  05-cli.py
scripts/: enhance_training_data.py
src/prompt_poetry/: __init__.py  cli.py  core.py  presets.py
src/prompt_poetry/techniques/: __init__.py  constitution.py  constraint.py  meta.py  narrative.py  persona.py  primer.py  ritual.py  toggle.py
tests/: test_api.py  test_cli.py  test_core.py  test_presets.py  test_techniques.py
