[project]
name = "prompt-poetry"
version = "0.1.0"
description = "Composable prompt engineering techniques for biohacking LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Drew Beyersdorf", email = "drewbeyersdorf@gmail.com" }]

[project.optional-dependencies]
dspy = ["dspy-ai>=2.5"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_poetry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
