[project]
name = "prompt-poetry"
version = "0.1.0"
description = "Composable prompt engineering techniques for biohacking LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Drew Beyersdorf" }]
keywords = ["prompt-engineering", "llm", "ai", "composable", "transforms", "prompt-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/drewbeyersdorf/prompt-poetry"
Repository = "https://github.com/drewbeyersdorf/prompt-poetry"
Issues = "https://github.com/drewbeyersdorf/prompt-poetry/issues"

[project.scripts]
prompt-poetry = "prompt_poetry.cli:main"

[project.optional-dependencies]
dspy = ["dspy-ai>=2.5"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_poetry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
